frmSetting is added

--- a/ConwaysGameLife/ConwaysGameLife/ConwaysGameLife.csproj
+++ b/ConwaysGameLife/ConwaysGameLife/ConwaysGameLife.csproj
@@ -63,6 +63,12 @@
     <Compile Include="frmPresetMap.Designer.cs">
       <DependentUpon>frmPresetMap.cs</DependentUpon>
     </Compile>
+    <Compile Include="frmSettings.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="frmSettings.Designer.cs">
+      <DependentUpon>frmSettings.cs</DependentUpon>
+    </Compile>
     <Compile Include="LifeRules.cs" />
     <Compile Include="Map.cs" />
     <Compile Include="Program.cs" />
@@ -75,6 +81,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmPresetMap.resx">
       <DependentUpon>frmPresetMap.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmSettings.resx">
+      <DependentUpon>frmSettings.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
