--- a/ConwaysGameLife/ConwaysGameLife/ConwaysGameLife.csproj
+++ b/ConwaysGameLife/ConwaysGameLife/ConwaysGameLife.csproj
@@ -106,7 +106,7 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Resources\small_sochi_2016.png" />
+    <Folder Include="Resources\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
